[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmf-transformation"
version = "0.1.0"
description = "Subsampling transformations and utilities for Privacy Loss Distribution (PLD) PMFs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{ name = "Your Name" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "dp-accounting>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/moshenfeld/PLD_subsampling"
Repository = "https://github.com/moshenfeld/PLD_subsampling.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["pmf_transformation*"]

